--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>React Webpack Template</title>
+  <title>Stack Card Reader</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="icon" type="image/x-icon" href="/static/favicon.ico" />
 </head>
 <body>
   <div id="app">APPLICATION CONTENT</div>
